getComputedStyle for border-image is not implemented. https://bugs.webkit.org/show_bug.cgi?id=75347

Reviewed by Tony Chang.

Source/WebCore:

Implement getComputedStyle for border-color.

fast/css/getComputedStyle/computed-style-border-image.html was extended to cover the
new feature.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

LayoutTests:

Extend existing test to cover that we return correct values for border-image.

* fast/css/getComputedStyle/computed-style-border-image-expected.txt:
* fast/css/getComputedStyle/computed-style-border-image.html:


Canonical link: https://commits.webkit.org/92390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104144 268f45cc-cd09-0410-ab3c-d52691b4dbfc